--- a/package.json
+++ b/package.json
@@ -3,27 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "biome check",
+    "format": "biome format --write"
   },
   "dependencies": {
-    "next": "15.0.2",
-    "prisma": "^5.21.1",
-    "react": "19.0.0-rc-4d577fd2-20241104",
-    "react-dom": "19.0.0-rc-4d577fd2-20241104",
-    "stylus": "^0.64.0"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "next": "15.5.2"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/stylus": "^0",
-    "eslint": "^9.14.0",
-    "eslint-config-next": "15.0.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
-  },
-  "packageManager": "yarn@4.5.1"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@biomejs/biome": "2.2.0"
+  }
 }
