--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "motion": "^12.23.16",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
