--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@upstash/redis": "^1.35.4",
     "clsx": "^2.1.1",
     "motion": "^12.23.16",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.0.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "sass": "^1.93.2"
   },
   "devDependencies": {
